--- a/src/app/score/score-search/score-search.component.html
+++ b/src/app/score/score-search/score-search.component.html
@@ -6,35 +6,35 @@
       <bio-card-content>
         <form-field label="Platforms">
           <bio-select placeholder="Platforms" multiple controlName="idPlatforms">
-            <bio-option *ngFor="let platform of platforms$ | async; trackBy: trackByPlatform" [value]="platform.id">
+            <bio-option *ngFor="let platform of platforms$ | async; trackBy: trackById" [value]="platform.id">
               {{ platform.name }}
             </bio-option>
           </bio-select>
         </form-field>
         <form-field label="Games" [loading]="gameLoading$ | async">
           <bio-select placeholder="Games" multiple controlName="idGames">
-            <bio-option *ngFor="let game of games$ | async; trackBy: trackByGame" [value]="game.id">
+            <bio-option *ngFor="let game of games$ | async; trackBy: trackById" [value]="game.id">
               {{ game.name }}
             </bio-option>
           </bio-select>
         </form-field>
         <form-field label="Mini games" [loading]="miniGameLoading$ | async">
           <bio-select placeholder="Mini games" multiple controlName="idMiniGames">
-            <bio-option *ngFor="let miniGame of miniGames$ | async; trackBy: trackByMiniGame" [value]="miniGame.id">
+            <bio-option *ngFor="let miniGame of miniGames$ | async; trackBy: trackById" [value]="miniGame.id">
               {{ miniGame.name }}
             </bio-option>
           </bio-select>
         </form-field>
         <form-field label="Modes" [loading]="modeLoading$ | async">
           <bio-select placeholder="Modes" multiple controlName="idModes">
-            <bio-option *ngFor="let mode of modes$ | async; trackBy: trackByMode" [value]="mode.id">
+            <bio-option *ngFor="let mode of modes$ | async; trackBy: trackById" [value]="mode.id">
               {{ mode.name }}
             </bio-option>
           </bio-select>
         </form-field>
         <form-field label="Stages" [loading]="stageLoading$ | async">
           <bio-select placeholder="Stages" multiple controlName="idStages">
-            <bio-option *ngFor="let stage of stages$ | async; trackBy: trackByStage" [value]="stage.id">
+            <bio-option *ngFor="let stage of stages$ | async; trackBy: trackById" [value]="stage.id">
               {{ stage.name }}
             </bio-option>
           </bio-select>
@@ -42,12 +42,12 @@
         <form-field [loading]="characterLoading$ | async" label="Characters">
           <bio-select placeholder="Characters" multiple controlName="idCharacterCostumes">
             <bio-optgroup
-              *ngFor="let character of characters$ | async; trackBy: trackByCharacter"
+              *ngFor="let character of characters$ | async; trackBy: trackById"
               [label]="character.name"
               [title]="character.name"
             >
               <bio-option
-                *ngFor="let characterCostume of character.characterCostumes; trackBy: trackByCharacterCostume"
+                *ngFor="let characterCostume of character.characterCostumes; trackBy: trackById"
                 [value]="characterCostume.id"
               >
                 {{ characterCostume.name }}
