- added admin-errors component (closes #68) - added ngx-highlightjs to highlight the code in the admin-errors component

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -20,4 +20,8 @@
     <icon [mdi]="mdiAccountLock"></icon>
     Ban user
   </a>
+  <a bioCardMenu routerLink="errors">
+    <icon>error_outline</icon>
+    Errors
+  </a>
 </bio-card-menus>
