--- a/src/app/shared/components/list/list-item.component.html
+++ b/src/app/shared/components/list/list-item.component.html
@@ -4,9 +4,9 @@
   type="radio"
   [name]="name"
   [value]="value"
-  [model]="model"
+  [checked]="model === value"
   [disabled]="disabled"
-  (modelChange)="onChange($event)"
+  (change)="onChange(value)"
   (blur)="onTouched()"
   tabindex="-1"
   *ngIf="listParentControl && value"
