--- a/src/app/shared/components/select/select-multiple.component.html
+++ b/src/app/shared/components/select/select-multiple.component.html
@@ -5,7 +5,7 @@
   </ng-template>
 </div>
 <div class="select-icon">
-  <icon>keyboard_arrow_down</icon>
+  <icon small>keyboard_arrow_down</icon>
 </div>
 <ng-template #panel>
   <div
