- reduced size of select.scss

--- a/src/app/shared/components/select/select.scss
+++ b/src/app/shared/components/select/select.scss
@@ -26,16 +26,10 @@
     }
   }
 
+  &.multiple > .select-value,
   > .select-icon {
     display: flex;
     align-items: center;
-  }
-
-  &.multiple {
-    > .select-value {
-      display: flex;
-      align-items: center;
-    }
   }
 }
 
@@ -51,19 +45,22 @@
   min-height: calc(35px + 1rem);
   max-height: calc((35px * 8) + 1rem);
 
-  @media only screen and (max-width: v.$mobile-width) {
-    min-height: calc(40px + 1rem);
-    max-height: calc((40px * 8) + 1rem);
-  }
-
   @for $i from 1 through 8 {
     &.height-#{$i} {
       height: calc((35px * #{$i}) + 1rem);
+    }
+  }
 
-      @media only screen and (max-width: v.$mobile-width) {
+  @media only screen and (max-width: v.$mobile-width) {
+    min-height: calc(40px + 1rem);
+    max-height: calc((40px * 8) + 1rem);
+
+    @for $i from 1 through 8 {
+      &.height-#{$i} {
         height: calc((40px * #{$i}) + 1rem);
       }
     }
   }
+
   @include m.elevation(2);
 }
