--- a/src/app/player/player-shared/player-search-modal/player-search-modal.component.scss
+++ b/src/app/player/player-shared/player-search-modal/player-search-modal.component.scss
@@ -13,7 +13,6 @@ $list-item-height: 44px;
 .list {
   height: $list-item-height * 10;
   overflow: auto;
-  margin: 0 1rem;
 }
 
 ::ng-deep {
@@ -24,4 +23,17 @@ $list-item-height: 44px;
       min-width: 80vw;
     }
   }
+}
+
+.modal-actions {
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.modal-content {
+  padding: 0;
+}
+
+p {
+  padding: 0 1rem;
 }
