- fixed select not applying the danger style when invalid - fixed label of select no applying the danger style when invalid - added missing error message in the Character select on score-add-player.component.html

--- a/src/app/score/score-add/score-add-player/score-add-player.component.html
+++ b/src/app/score/score-add/score-add-player/score-add-player.component.html
@@ -86,6 +86,9 @@
           </bio-option>
         </bio-optgroup>
       </bio-select>
+      <errors>
+        <error *error="'required'">Character is required</error>
+      </errors>
     </form-field>
     <!--</editor-fold>-->
     <form-field label="Description" [disabled]="disabled">
