- fixed score add player host radio not being selected when entering the page - fixed stopPropagation in the score add player host radio to prevente the collapse

--- a/src/app/score/score-add/score-add-player/score-add-player.component.html
+++ b/src/app/score/score-add/score-add-player/score-add-player.component.html
@@ -15,14 +15,14 @@
       >
       )
     </ng-container>
-    <label class="host">
+    <label class="host" (click)="$event.stopPropagation()">
       <input
         [disabled]="disabled"
         type="radio"
         name="host"
         [value]="true"
         controlName="host"
-        (change)="onHostChange($event)"
+        (change)="onHostChange()"
       />
       Host
     </label>
