- Title --> About me

--- a/src/app/player/player-profile/player-profile.component.html
+++ b/src/app/player/player-profile/player-profile.component.html
@@ -75,7 +75,7 @@
             resize="vertical"
             rows="3"
             [model]="player.aboutMe"
-            placeholder="Title"
+            placeholder="About me"
             (modelChange)="update('aboutMe', $event)"
             [disabled]="state.saving"
           ></textarea>
