- added placeholder to ScoreSearch score input

--- a/src/app/score/score-search/score-search.component.html
+++ b/src/app/score/score-search/score-search.component.html
@@ -56,7 +56,7 @@
           </bio-select>
         </form-field>
         <form-field label="Score">
-          <input bioInput controlName="score" type="text" autocomplete="off" />
+          <input bioInput controlName="score" type="text" autocomplete="off" placeholder="E.g. 750k or 750.000" />
         </form-field>
         <bio-checkbox controlName="worldRecord">World record</bio-checkbox>
         <bio-checkbox controlName="characterWorldRecord">Character world record</bio-checkbox>
