- remove unused RuleService#update method - remove unnecessary RuleStore and RuleQuery - remove LocalState com RuleComponent - added new CacheService

--- a/src/app/admin/admin-rules/admin-rules.component.html
+++ b/src/app/admin/admin-rules/admin-rules.component.html
@@ -41,7 +41,7 @@
         primary
         type="submit"
         [disabled]="(form.invalid || form.pristine) && !deletedValue.length"
-        [loading]="saving$ | async"
+        [loading]="saving"
       >
         Save
       </button>
