--- a/src/app/rules/rules.component.html
+++ b/src/app/rules/rules.component.html
@@ -1,7 +1,7 @@
 <bio-card class="center-block-medium">
   <h3 bioCardTitle>Rules</h3>
   <bio-card-content>
-    <h5 *ngFor="let rule of rules$ | async; trackBy: trackByRule">{{ rule.order }} - {{ rule.description }}</h5>
+    <h5 *ngFor="let rule of rules; trackBy: trackBy">{{ rule.order }} - {{ rule.description }}</h5>
   </bio-card-content>
   <bio-card-actions *ngIf="isAdmin$ | async">
     <a bioButton primary routerLink="/admin/rules">Edit rules</a>
